# tun2socks-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
core/: Cargo.toml  build.rs  wrapper.h
core/src/: ilog.rs  lib.rs  output.rs  redirect.rs  stack.rs  tcp.rs  udp.rs  util.rs
scripts/: config_route  debug_run  recover_route  run  show_open_files
tun2socks/: Cargo.toml  tun2socks.h
tun2socks/src/: lib.rs  main.rs
