[package]
name = "core"
version = "0.1.0"
authors = ["ghost <noreply>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7"
futures = "0.3"
futures-util = "0.3"
tokio = { version = "0.2", features = ["full"] }
async-socks5 = "0.3"

[build-dependencies]
cc = "1.0"
bindgen = "0.54.1"
